--- a/Listcourse/templates/base.html
+++ b/Listcourse/templates/base.html
@@ -8,7 +8,7 @@
 	{% load static %}
 	{% block css %}
 	<link rel="stylesheet" href="{% static 'css/foundation.css' %}" type="text/css">
-	
+	<link rel="stylesheet" href="{% static 'css/style.css' %}" type="text/css">
 	{% endblock %}
 	{% block linkJs %}
 		<script src="{% static 'js/jquery-1.8.3.min.js' %}"></script>
@@ -20,9 +20,6 @@
 {% block nav %}
 {% endblock %}
 {% block content %}
-{% endblock %}
-{% block footer %}
-{%include 'footer.html' %}
 {% endblock %}
 </body>
 {% block javascripts %}
