--- a/Listcourse/templates/ingredient/myLists.html
+++ b/Listcourse/templates/ingredient/myLists.html
@@ -41,7 +41,9 @@
 			    {% endfor %}
 			  </tbody>
 			</table>
+			<a href="{% url 'changeList' myList.id %}" class="button info">Choisir cette liste</a>
 			<a href="{% url 'deleteList' myList.id %}" class="button alert">Supprimer</a>
+
 		{% endfor %}
 	</div> 
 </div>
